# IsalGraph

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: compact-context.sh
assets/: graphical_abstract_agent_instructions_v2.md
benchmarks/: alphabet_entropy  canonical_invariance  canonical_invariance.py  eval_computational  eval_correlation  eval_embedding  eval_encoding  eval_message_length  eval_setup  eval_visualizations  greedy_optimality_gap  levenshtein_vs_ged  levenshtein_vs_ged.py  plotting_styles.py  random_roundtrip  random_roundtrip.py  roundtrip_fixed_point  starting_node_sensitivity  string_length_analysis  string_length_analysis.py  string_pipeline
benchmarks/alphabet_entropy/: alphabet_entropy.py
benchmarks/canonical_invariance/: canonical_invariance.py
benchmarks/eval_computational/: __init__.py  eval_computational.py  timing_utils.py
benchmarks/eval_correlation/: README.md
benchmarks/eval_embedding/: __init__.py
benchmarks/eval_encoding/: __init__.py  synthetic_generator.py
benchmarks/eval_setup/: README.md  __init__.py  dataset_filter.py  eval_setup.py  iam_letter_loader.py  levenshtein_computer.py  method_comparator.py  pyg_ged_extractor.py  validator.py
benchmarks/eval_visualizations/: __init__.py  cdll_drawing.py  composite_method_tradeoff.py  fig_empirical_complexity.py  generate_computational_figures.py  generate_embedding_figures.py  graph_drawing.py  graph_loader.py  result_loader.py  string_alignment.py
benchmarks/eval_visualizations/illustrative/: __init__.py  algorithm_figures.py  topology_and_complexity.py
benchmarks/eval_visualizations/individual_figures/: correlation_examples.py  embedding_examples.py
benchmarks/eval_visualizations/population_figures/: __init__.py  central_heatmap.py  derived_figures.py  embedding_figures.py
benchmarks/greedy_optimality_gap/: greedy_optimality_gap.py
benchmarks/levenshtein_vs_ged/: levenshtein_vs_ged.py
benchmarks/random_roundtrip/: random_roundtrip.py
benchmarks/real_data/eval_computational/: eval_computational.py
benchmarks/real_data/eval_correlation/: __init__.py  correlation_metrics.py  eval_correlation.py
benchmarks/real_data/eval_embedding/: embedding_methods.py  eval_embedding.py
benchmarks/real_data/eval_encoding/: compute_synthetic_ged.py  eval_encoding.py
benchmarks/real_data/eval_message_length/: __init__.py  eval_message_length.py  message_length_computer.py
benchmarks/real_data/eval_setup/: canonical_computer.py  eval_setup.py  ged_computer.py  generate_greedy_single.py  graphedx_loader.py  greedy_single_computer.py  method_comparator.py  pruned_exhaustive_computer.py  validator.py  wl_kernel_computer.py
benchmarks/real_data/eval_visualizations/: composite_method_tradeoff.py  embedding_loader.py  example_selector.py  fig_empirical_complexity.py  fig_message_length.py  generate_correlation_figures.py  generate_encoding_figures.py  generate_illustrative_figures.py  result_loader.py  table_generator.py  table_performance_summary.py
benchmarks/starting_node_sensitivity/: starting_node_sensitivity.py
benchmarks/string_length_analysis/: README.md  string_length_analysis.py
benchmarks/synthetic_data/canonical_invariance/: README.md
benchmarks/synthetic_data/levenshtein_vs_ged/: README.md  levenshtein_vs_ged.py
benchmarks/synthetic_data/random_roundtrip/: README.md
benchmarks/synthetic_data/roundtrip_fixed_point/: roundtrip_fixed_point.py
docs/: BENCHMARKING_CURRENT_STATE.md  DEVELOPMENT.md  ISALGRAPH_AGENT_CONTEXT.md  PROGRESS.md  benchmarks.html  explorer.html  how-it-works.html  index.html  math.html  playground.html  publications.html  team.html
docs/css/: benchmarks.css  components.css  explorer.css  footer.css  how-it-works.css  index.css  layout.css  math.css  nav.css  playground.css  publications.css  reset.css  team.css  typography.css  variables.css
docs/data/: publications.csv  team.csv
docs/js/: components.js  data-loader.js  publications.js  theme.js
experiments/paper_pipeline/: config.yaml  generate_figures.py  launch.sh
scripts/: correlation_decomposition.py  isolation_radius.py  scaffold.sh
slurm/: config.yaml  launch.sh
slurm/workers/: alphabet_entropy_login.sh  alphabet_entropy_slurm.sh  canonical_invariance_login.sh  canonical_invariance_slurm.sh  eval_computational_login.sh  eval_computational_slurm.sh  eval_correlation_login.sh  eval_correlation_slurm.sh  eval_embedding_login.sh  eval_embedding_slurm.sh  eval_encoding_slurm.sh  eval_setup_login.sh  eval_setup_slurm.sh  greedy_optimality_gap_login.sh  greedy_optimality_gap_slurm.sh  levenshtein_ged_login.sh  levenshtein_ged_slurm.sh  levenshtein_vs_ged_login.sh  levenshtein_vs_ged_slurm.sh  random_roundtrip_login.sh  random_roundtrip_slurm.sh  roundtrip_fixed_point_login.sh  roundtrip_fixed_point_slurm.sh  starting_node_sensitivity_login.sh  starting_node_sensitivity_slurm.sh  string_length_analysis_login.sh  string_length_analysis_slurm.sh  string_length_login.sh  string_length_slurm.sh  topology_complexity_figs_login.sh  topology_complexity_figs_slurm.sh
src/isalgraph/: __init__.py  errors.py  types.py
tests/: conftest.py
tests/eval_validation/: conftest.py  test_canonical_fixedpoint.py  test_canonical_properties.py  test_metric_properties.py  test_reconstruction.py  test_roundtrip_isomorphism.py  test_string_validity.py  test_wl_kernel_properties.py
tests/integration/: test_canonical_networkx.py  test_igraph_adapter.py  test_networkx_adapter.py  test_pipeline_imports.py  test_pyg_adapter.py
tests/property/: test_pruned_canonical_property.py  test_roundtrip_property.py
tests/unit/: test_algorithms.py  test_canonical.py  test_canonical_pruned.py  test_cdll.py  test_errors.py  test_graph_to_string.py  test_message_length.py  test_roundtrip.py  test_sparse_graph.py  test_string_to_graph.py
(+83 files in other folders)
