[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isalgraph"
version = "0.1.0"
description = "Graph representation by instruction strings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ezequiel Lopez-Rubio", email = "ezeqlr@lcc.uma.es"},
    {name = "Mario Pascual Gonzalez"},
]
# Core has zero dependencies
dependencies = []

[project.optional-dependencies]
networkx = ["networkx>=3.0"]
igraph = ["igraph>=0.11"]
pyg = ["torch>=2.0", "torch-geometric>=2.4"]
viz = ["matplotlib>=3.7"]
bench = [
    "isalgraph[networkx,viz]",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.0",
]
all = ["isalgraph[networkx,igraph,viz,bench,dev]"]
eval = [
    "isalgraph[networkx,viz,bench]",
    "torch>=2.0",
    "python-Levenshtein>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (external graph libs)",
    "property: Property-based tests (hypothesis)",
    "slow: Long-running tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["networkx", "networkx.*", "igraph", "igraph.*", "torch", "torch.*", "torch_geometric", "torch_geometric.*", "Levenshtein", "Levenshtein.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# E402: imports after pytest.importorskip() -- standard pattern for optional deps
"tests/integration/*.py" = ["E402"]
# N802: test names use uppercase IsalGraph instruction names (V, C, N, P, W)
"tests/**/*.py" = ["N802"]
# E402: imports after sys.path manipulation for plotting_styles
# ANN: benchmark scripts use dynamic typing for flexibility
"benchmarks/**/*.py" = ["E402", "ANN"]
