[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isalgraph"
version = "0.1.0"
description = "Represent graph structure as instruction strings for Transformer models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Ezequiel Lopez-Rubio", email = "ezeqlr@lcc.uma.es"},
    {name = "Mario Pascual Gonzalez", email="mpascual@uma.es"},
]
keywords = [
    "graph",
    "graph-representation",
    "instruction-strings",
    "graph-isomorphism",
    "graph-distance",
    "transformer",
    "deep-learning",
    "graph-neural-networks",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
# Core has zero dependencies
dependencies = []

[project.urls]
Homepage = "https://github.com/MarioPasc/IsalGraph"
Documentation = "https://github.com/MarioPasc/IsalGraph#readme"
Repository = "https://github.com/MarioPasc/IsalGraph"
Issues = "https://github.com/MarioPasc/IsalGraph/issues"

[project.optional-dependencies]
networkx = ["networkx>=3.0"]
igraph = ["igraph>=0.11"]
pyg = ["torch>=2.0", "torch-geometric>=2.4"]
viz = ["matplotlib>=3.7"]
bench = [
    "isalgraph[networkx,viz]",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "numpy==1.26.4",
    "scikit-learn>=1.3",
    "grakel",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.0",
]
all = ["isalgraph[networkx,igraph,viz,bench,dev]"]
eval = [
    "isalgraph[networkx,viz,bench]",
    "torch>=2.0",
    "python-Levenshtein>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
isalgraph = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (external graph libs)",
    "property: Property-based tests (hypothesis)",
    "slow: Long-running tests",
    "eval_validation: Validation tests on Picasso-generated eval data",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["networkx", "networkx.*", "igraph", "igraph.*", "torch", "torch.*", "torch_geometric", "torch_geometric.*", "Levenshtein", "Levenshtein.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# E402: imports after pytest.importorskip() -- standard pattern for optional deps
"tests/integration/*.py" = ["E402"]
# N802: test names use uppercase IsalGraph instruction names (V, C, N, P, W)
"tests/**/*.py" = ["N802"]
# E402: imports after sys.path manipulation for plotting_styles
# ANN: benchmark scripts use dynamic typing for flexibility
"benchmarks/**/*.py" = ["E402", "ANN"]
# E402: imports after pytest.importorskip() for optional deps
# ANN: test fixtures/methods don't need return type annotations
# N806: uppercase variables for mathematical notation (K, D matrices)
"tests/eval_validation/*.py" = ["E402", "ANN", "N806"]
